Correct HTML attribute escaping
Fixed escaping issues in HTML attributes.

--- a/index.html
+++ b/index.html
@@ -956,14 +956,14 @@
     { id:'streak_14',  emoji:'💪', name:'Two Weeks',      desc:'14 days of discipline and dedication.',      type:'streak',  threshold:14 },
     { id:'streak_21',  emoji:'🏅', name:'21 Days',        desc:'21 days — a habit is born!',                 type:'streak',  threshold:21 },
     { id:'streak_30',  emoji:'🥇', name:'One Month',      desc:'30 days of intermittent fasting mastery!',   type:'streak',  threshold:30 },
-    { id:'streak_60',  emoji:'🏆', name:'60-Day Legend',  desc:'Two months strong. You're unstoppable.',   type:'streak',  threshold:60 },
+    { id:'streak_60',  emoji:'🏆', name:'60-Day Legend',  desc:'Two months strong. You\'re unstoppable.',   type:'streak',  threshold:60 },
     { id:'streak_90',  emoji:'💎', name:'90-Day Diamond', desc:'Three months. Elite-level commitment.',      type:'streak',  threshold:90 },
     // Weight loss
     { id:'loss_1',     emoji:'📉', name:'First Pound',    desc:'Lost your first pound. Every one counts!',  type:'weight',  threshold:1  },
-    { id:'loss_5',     emoji:'🎯', name:'5 lbs Down',     desc:'5 pounds lost. You're on your way!',       type:'weight',  threshold:5  },
+    { id:'loss_5',     emoji:'🎯', name:'5 lbs Down',     desc:'5 pounds lost. You\'re on your way!',       type:'weight',  threshold:5  },
     { id:'loss_10',    emoji:'🌟', name:'10 lbs Gone',    desc:'10 pounds lost — a major milestone!',       type:'weight',  threshold:10 },
     { id:'loss_20',    emoji:'🚀', name:'20 lbs Lighter', desc:'20 pounds! Your hard work shows.',          type:'weight',  threshold:20 },
-    { id:'loss_goal',  emoji:'🎊', name:'Goal Reached',   desc:'You've hit your target weight. Amazing!',  type:'weight',  threshold:0  },
+    { id:'loss_goal',  emoji:'🎊', name:'Goal Reached',   desc:'You\'ve hit your target weight. Amazing!',  type:'weight',  threshold:0  },
     // Hydration
     { id:'hydro_7',    emoji:'💧', name:'Hydration Week', desc:'Hit your water goal 7 days in a row.',      type:'hydro',   threshold:7  },
     { id:'hydro_first',emoji:'🫗', name:'First Sip',      desc:'Logged your first hydration entry.',        type:'hydro',   threshold:1  },
